--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "request": "^2.85.0"
   }
 }
