--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-stage-2": "^6.24.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "request": "^2.85.0"
   }
