--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index.js --presets es2015,stage-2"
+    "start": "babel-node src/index.js --presets es2015,stage-2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
