--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "chickadee-analytics",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "distribution/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node src/index.js --presets es2015,stage-2"
+    "start": "babel source --presets es2015,stage-2 -d distribution"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -13,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "chickadee-api": "github:pizzaisdavid/chickadee-api-js",
     "express": "^4.16.3",
     "request": "^2.85.0"
   }
