--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "distribution/index.js",
   "scripts": {
-    "start": "babel source --presets es2015,stage-2 -d distribution"
+    "compile": "babel source --presets es2015,stage-2 -d distribution",
+    "prepublish": "npm run compile",
+    "prestart": "npm run compile",
+    "start": "node ./distribution/index.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
