--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "chickadee-realtime-api": "pizzaisdavid/chickadee-realtime-api-js",
+    "chickadee-realtime-api": "github:pizzaisdavid/chickadee-realtime-api-js",
     "express": "^4.16.3",
     "request": "^2.85.0"
   }
