--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "mysql": "^2.15.0",
     "request": "^2.85.0"
   }
 }
