--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "moment": "^2.21.0",
     "mysql": "^2.15.0",
     "request": "^2.85.0",
     "socket.io": "^2.0.4"
