--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "collections": "^5.1.2",
     "express": "^4.16.3",
     "lodash": "^4.17.5",
     "mocha": "^5.0.5",
